Fix unnecessary navigation bar wrapping in Dutch translation
This reduces the vertical spacing between items in the navigation bar
to 2em, which is significantly smaller than the previous spacing, yet
still large enough to keep the menu items easily distinguishable.

--- a/assets/css/style-freenet-7.css
+++ b/assets/css/style-freenet-7.css
@@ -177,8 +177,8 @@ padding-bottom: 1px; /* to make space for the blue activation line */
 }
 
 .navbar-inverse .navbar-nav-page > li > a {
-font-size: 13px;
-margin: 10px 20px 10px 20px;
+    font-size: 13px;
+    margin: 10px 1em;
 }
 
 .navbar-inverse .navbar-nav-language > li > a {
